# XJTU-RMV-TASK02

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp  recognition.cpp  test.cpp
